buildscript {
	ext {
		springBootVersion = '3.3.0'
		set('springCloudVersion', "2023.0.2")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id "org.sonarqube" version "5.0.0.4638"
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.springframework.boot' version '3.3.0'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd

jar {
	archivesBaseName = 'scsb-circ'
	archiveVersion = '0.0.1-SNAPSHOT'
}
sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar',include: '*2.8.jar')
	implementation fileTree(dir: '/data/commonjar', include: 'jsip2-1.1.0.jar')
	implementation fileTree(dir: '/data/commonjar', include: 'ncip-2.0.jar')
	implementation 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testImplementation 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
	implementation('org.springframework.boot:spring-boot-starter-web-services')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation("org.springframework.boot:spring-boot-starter-data-rest")

	implementation 'net.sf.dozer:dozer:5.5.1'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-beta2'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'

	implementation('commons-beanutils:commons-beanutils:1.9.4')

	implementation('commons-io:commons-io:2.16.1')
	implementation('io.springfox:springfox-swagger-ui:3.0.0')
	implementation('io.springfox:springfox-swagger2:3.0.0')
	implementation('org.codehaus.jettison:jettison:1.5.4')
	implementation('org.apache.camel.springboot:camel-spring-boot-starter:4.4.3')
	implementation group: 'org.apache.camel.springboot', name: 'camel-aws-s3-starter', version: '3.8.0'
	implementation group: 'org.apache.camel', name: 'camel-aws-s3', version: '3.8.0'
	implementation('org.apache.camel:camel-activemq:4.4.3')
	implementation('org.apache.camel:camel-core-engine:4.4.3')
	implementation('org.apache.camel:camel-core:4.4.3')
	implementation('org.apache.camel:camel-support:4.4.3')
	implementation('org.apache.camel:camel-bindy:4.4.3')
	implementation('org.apache.camel:camel-mail:4.4.3')
	implementation('org.apache.camel:camel-ftp:4.4.3')
	implementation('org.apache.camel:camel-zipfile:4.4.3')
	implementation('org.apache.activemq:activemq-pool:6.1.2')
	implementation('org.apache.activemq:activemq-broker:6.1.2')
	implementation 'org.apache.activemq:activemq-client:6.1.2'
	implementation('info.freelibrary:freelib-marc4j:2.6.12')
	implementation('org.apache.poi:poi:5.3.0')
	implementation group: 'org.apache.camel', name: 'camel-zip-deflater', version: '4.4.3'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.12.0'

	implementation('org.apache.poi:poi-ooxml:5.3.0')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
	compileOnly('org.projectlombok:lombok:1.18.32')
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	implementation 'io.zipkin.brave:brave:6.0.3'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation group: 'org.json', name: 'json', version: '20240303'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
	implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
	implementation 'com.sun.mail:smtp:2.0.1'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'

	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
	implementation("org.springframework.boot:spring-boot-starter-actuator")
}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '3.0.0-beta2'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
	jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}


jacoco {
	toolVersion = "0.8.12"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}



task scsbCircJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir = new File(home+"/scsb-javadocs/scsb-circ");

}

bootJar {
	layered {
		enabled = true
	}
}

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}

tasks.named('bootJar') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}